new changes few sections left

--- a/index.html
+++ b/index.html
@@ -56,14 +56,6 @@
               <li><a href="#services">Services</a></li>
               <li><a href="#portfolio">Portfolio</a></li>
               <li><a href="#team">Team</a></li>
-              <li class="drop-down"><a href="">Drop Down</a>
-                <ul>
-                  <li><a href="#">Drop Down 1</a></li>
-                  <li><a href="#">Drop Down 3</a></li>
-                  <li><a href="#">Drop Down 4</a></li>
-                  <li><a href="#">Drop Down 5</a></li>
-                </ul>
-              </li>
               <li><a href="#contact">Contact Us</a></li>
 
             </ul>
@@ -86,8 +78,9 @@
           <div class="carousel-item active" style="background-image: url(assets/img/airepurotres.jpg)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">We are professional</h2>
-                <p class="animate__animated animate__fadeInUp">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <h2 class="animate__animated animate__fadeInDown"> Enjoy your family, enjoy your life. </h2>
+                <p class="animate__animated animate__fadeInUp"> After you choose AIR DUCT CLEANING by A3S........Just Breath .!!!!!
+
                 <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
               </div>
             </div>
@@ -96,8 +89,10 @@
           <div class="carousel-item" style="background-image: url(assets/img/airepurodos.jpg)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">At vero eos et accusamus</h2>
-                <p class="animate__animated animate__fadeInUp">Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut.</p>
+                <h2 class="animate__animated animate__fadeInDown">Health had not been as relevant as now ...</h2>
+                <p class="animate__animated animate__fadeInUp">Pure air is ESSENTIAL, YOU KNOW !!.
+                   For your HEALTH for your Tranquility ... 
+                  </p>
                 <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
               </div>
             </div>
@@ -126,24 +121,26 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-4 box">
-            <i class="ion-ios-bookmarks-outline"></i>
+          <div class="col-lg-3 box">
             <h4 class="title"><a href="">Lorem Ipsum Delino</a></h4>
-            <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+            <p class="description">According to the EPA,” the air inside your home maybe 5 times more polluted than the air outside”. </p>
           </div>
 
-          <div class="col-lg-4 box box-bg">
-            <i class="ion-ios-stopwatch-outline"></i>
+          <div class="col-lg-3 box box-bg">
             <h4 class="title"><a href="">Dolor Sitema</a></h4>
-            <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+            <p class="description">Virus, fungus, bacteria, and hundreds of other germs are always carried in the air. If inhaled into the lungs, germs can cause cold, flu, pneumonia, and other respiratory infections. When these germs lodge in your lungs, your breathing can be disrupted, and you can become ill. American Lung Association.</p>
           </div>
 
-          <div class="col-lg-4 box">
-            <i class="ion-ios-heart-outline"></i>
+          <div class="col-lg-3 box">
             <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+            <p class="description">2,900 home clothes dryer fires are reported each year and cause an estimated 5 deaths, 100 injuries, and $35 million in property loss.</p>
           </div>
 
+          <div class="col-lg-3 box">
+            <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
+            <p class="description">Sick Building Syndrome, a worldwide phenomenon, results when chemical substances used in office construction are steadily released into the atmosphere from electronic equipment, carpeting, furniture and fittings. 
+            </p>
+          </div>
         </div>
       </div>
     </section><!-- End Featured Services Section -->
@@ -154,7 +151,8 @@
 
         <header class="section-header">
           <h3>About Us</h3>
-          <p>Air Duc Cleaning by A3S is a company specialized in the maintenance service of Air Conditioning and Air distribution systems (Duct Cleaning and Decontamination), which combine a high-quality professional service, specialized equipment and the only method accepted by the National Air Duct Cleaners Association (NADCA). This combination of technology-professionalism and commitment guarantee the greater value for your investment which translates into tranquility and peace of mind..</p>
+          <p>Air Duct Cleaning by A3S is a family company specialized in the maintenance service of Air Conditioning and Air distribution systems (Duct Cleaning and Decontamination), which combine a high-quality professional service, specialized equipment and the only method accepted by the National Air Duct Cleaners Association (NADCA). This combination of technology-professionalism and commitment guarantee the greater value for your investment which translates into health and peace of mind.
+          </p>
         </header>
 
         <div class="row about-cols">
@@ -211,40 +209,35 @@
 
         <header class="section-header wow fadeInUp">
           <h3>Services</h3>
-          <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus, ad pro quaestio laboramus. Ei ubique vivendum pro. At ius nisl accusam lorenta zanos paradigno tridexa panatarel.</p>
         </header>
 
         <div class="row">
 
-          <div class="col-lg-4 col-md-6 box" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-3 col-md-6 box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="ion-ios-analytics-outline"></i></div>
-            <h4 class="title"><a href="">Air conditioning system evaluation.</a></h4>
-            <p class="description">We proceed according to the only method recognized by the National Association of Duct Cleaners (NADCA) as "Source Removal", it is the only accepted way to clean and decontaminate air conditioning systems</p>
+            <h4 class="title"><a href="">INSPECTION AND MAINTENANCE OF THE AIR CONDITIONING SYSTEM.</a></h4>
+            <p class="description">Inspection and maintenance of commercial or residential heating, ventilation, and air conditioning systems to prolong equipment life, reduce repair incidence, and prevent costly breakdowns. HVAC contractors and property managers should perform HVAC preventive maintenance inspections quarterly or bi-annually, particularly before peak usage seasons.
+ 
+            An HVAC inspection easily conduct preventive maintenance of an HVAC system in commercial buildings and residential properties.  HVAC checklists help easily identify signs of HVAC failure, address potential issues, and ensure that heating, ventilation, and air conditioning systems are well-maintained and running cost-efficiently.
+            </p>
           </div>
-          <div class="col-lg-4 col-md-6 box" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-3 col-md-6 box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="ion-ios-bookmarks-outline"></i></div>
-            <h4 class="title"><a href="">Air conditioning system maintenance</a></h4>
-            <p class="description">We proceed according to the only method recognized by the National Association of Duct Cleaners (NADCA) as "Source Removal", it is the only accepted way to clean and decontaminate air conditioning systems</p>
+            <h4 class="title"><a href="">AIR DUCTS CLEANING AND SANITIZATION.</a></h4>
+            <p class="description">Air duct cleaning: We proceed according to the only method recognized by the National Association of Duct Cleaners (NADCA) as "Source Removal", it is the only accepted way to clean and decontaminate air conditioning systems. 
+            Also, we have equipment NIKRO as a key point to create the necessary negative pressure and all the rest of attachment and accessories such as: HEPA filters, The Attacker (vent cleaning tools, forward and reverse nozzles, whip nozzles), the Air scrubber and ULV fogger to sanitization, decontamination, and deodorization processes.
+            </p>
           </div>
-          <div class="col-lg-4 col-md-6 box" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-lg-3 col-md-6 box" data-aos="fade-up" data-aos-delay="300">
             <div class="icon"><i class="ion-ios-paper-outline"></i></div>
-            <h4 class="title"><a href="">Air ducts cleaning</a></h4>
-            <p class="description">We proceed according to the only method recognized by the National Association of Duct Cleaners (NADCA) as "Source Removal", it is the only accepted way to clean and decontaminate air conditioning systems</p>
+            <h4 class="title"><a href="">DRYER DUCTS CLEANING.</a></h4>
+            <p class="description">Dryer duct and vent cleaner: Super important and super easy to forget, when you do not expect it, you have a fire event caused for dryer duct obstructed. Dryer duct and vent cleaner: Super important and super easy to forget, when you do not expect it, you could have a fire event caused for dryer duct obstructed. We come to give the peace of mind that you need.
+          </p>
           </div>
-          <div class="col-lg-4 col-md-6 box" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-3 col-md-6 box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="ion-ios-speedometer-outline"></i></div>
-            <h4 class="title"><a href="">Dryer ducts cleaning</a></h4>
-            <p class="description">We proceed according to the only method recognized by the National Association of Duct Cleaners (NADCA) as "Source Removal", it is the only accepted way to clean and decontaminate air conditioning systems</p>
-          </div>
-          <div class="col-lg-4 col-md-6 box" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon"><i class="ion-ios-barcode-outline"></i></div>
-            <h4 class="title"><a href="">Air conditioning system Inspection</a></h4>
-            <p class="description">We proceed according to the only method recognized by the National Association of Duct Cleaners (NADCA) as "Source Removal", it is the only accepted way to clean and decontaminate air conditioning systems</p>
-          </div>
-          <div class="col-lg-4 col-md-6 box" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon"><i class="ion-ios-people-outline"></i></div>
-            <h4 class="title"><a href="">Dryer ducts evaluation and inspection</a></h4>
-            <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+            <h4 class="title"><a href="">ASSESMENT AND INSTALATION DEVICES</a></h4>
+            <p class="description">UV LAMP, IONIC AIR PURIFIER, HEPA AIR FILTERS, ELECTROSTATIC AIR PURIFIER, WHOLE HOUSE AIR PURIFIER, SMOKE EATER SYSTEM. We can choose together what is the air purifier system best fit to solve your air quality issue.</p>
           </div>
 
         </div>
@@ -260,46 +253,6 @@
         <a class="cta-btn" href="#">Call To Action</a>
       </div>
     </section><!-- End Call To Action Section -->
-
-    <!-- ======= Skills Section ======= -->
-    <section id="skills">
-      <div class="container" data-aos="fade-up">
-
-        <header class="section-header">
-          <h3>Our Skills</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
-        </header>
-
-        <div class="skills-content">
-
-          <div class="progress">
-            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-              <span class="skill">HTML <i class="val">100%</i></span>
-            </div>
-          </div>
-
-          <div class="progress">
-            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-              <span class="skill">CSS <i class="val">90%</i></span>
-            </div>
-          </div>
-
-          <div class="progress">
-            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
-            </div>
-          </div>
-
-          <div class="progress">
-            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
-              <span class="skill">Photoshop <i class="val">55%</i></span>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Skills Section -->
 
     <!-- ======= Facts Section ======= -->
     <section id="facts">
@@ -536,8 +489,7 @@
 
           <div class="testimonial-item">
             <img src="assets/img/testimonial-1.jpg" class="testimonial-img" alt="">
-            <h3>Saul Goodman</h3>
-            <h4>Ceo &amp; Founder</h4>
+            <h3>Lourdes</h3>
             <p>
               <img src="assets/img/quote-sign-left.png" class="quote-sign-left" alt="">
               These guys are grade A top. Arantxa took FANTASTIC care of us. V.I.P. service. We're from South Fl
@@ -548,8 +500,7 @@
 
           <div class="testimonial-item">
             <img src="assets/img/testimonial-2.jpg" class="testimonial-img" alt="">
-            <h3>Sara Wilsson</h3>
-            <h4>Designer</h4>
+            <h3>Angel Rivera</h3>
             <p>
               <img src="assets/img/quote-sign-left.png" class="quote-sign-left" alt="">
               When They told me  the are new but they are professional I have to be honest I had my doubts, but after received the first service Wow,
@@ -560,8 +511,7 @@
 
           <div class="testimonial-item">
             <img src="assets/img/testimonial-3.jpg" class="testimonial-img" alt="">
-            <h3>Jena Karlis</h3>
-            <h4>Store Owner</h4>
+            <h3>Lisa </h3>
             <p>
               <img src="assets/img/quote-sign-left.png" class="quote-sign-left" alt="">
               This Company is sooo friendly and the staff is so nice and professional. I am very picky when its related to my company.
