--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       <div class="container text-center" data-aos="zoom-in">
         <h3>Call us first! we’re here to help you</h3>
         <p> Looking for a quick answer to your question? we have it!</p>
-        <a class="cta-btn" href="tel:+13869682185">Call us!</a>
+        <a class="cta-btn" href="tel:3869682185">Call us!</a>
       </div>
     </section><!-- End Call To Action Section -->
 
@@ -514,9 +514,9 @@
       </div>
     </section><!-- End Testimonials Section -->
 
-
+    
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="section-bg">
+    <section id="contact" style="background: #fff" class="section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
@@ -538,7 +538,7 @@
             <div class="contact-phone">
               <i class="ion-ios-telephone-outline"></i>
               <h3>Phone Number</h3>
-              <p><a href="tel:+13869682185">+1 407 600 1134</a></p>
+              <p><a href="tel:+155895548855">+1 407 600 1134</a></p>
             </div>
           </div>
 
