--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
           <div class="col-lg-3 col-md-6 box" data-aos="fade-up" data-aos-delay="300">
             <div class="icon"><i class="ion-ios-paper-outline"></i></div>
             <h4 class="title"><a href="">DRYER DUCTS CLEANING.</a></h4>
-            <p class="description">Dryer duct and vent cleaner: Super important and super easy to forget, when you do not expect it, you have a fire event caused for dryer duct obstructed. Dryer duct and vent cleaner: Super important and super easy to forget, when you do not expect it, you could have a fire event caused for dryer duct obstructed. We come to give the peace of mind that you need.
+            <p class="description">Dryer duct and vent cleaner: Super important and super easy to forget, when you do not expect it, you have a fire event caused for dryer duct obstructed. We come to give the peace of mind that you need.
           </p>
           </div>
           <div class="col-lg-3 col-md-6 box" data-aos="fade-up" data-aos-delay="200">
@@ -425,7 +425,7 @@
             </figure>
 
             <div class="portfolio-info">
-              <h4><a href="portfolio-details.html">Equipment</a></h4>
+              <h4><a href="portfolio-details.html">Team</a></h4>
             </div>
           </div>
         </div>
@@ -490,7 +490,7 @@
             </figure>
 
             <div class="portfolio-info">
-              <h4><a href="portfolio-details.html">Equipment</a></h4>
+              <h4><a href="portfolio-details.html">Team</a></h4>
             </div>
           </div>
         </div>
@@ -590,7 +590,7 @@
             <div class="contact-address">
               <i class="ion-ios-location-outline"></i>
               <h3>Address</h3>
-              <address>A108 Adam Street, Sanford Florida 32771, USA</address>
+              <address>189 Venetian Bay Cir, Sanford Florida 32771, USA</address>
             </div>
           </div>
 
@@ -606,7 +606,7 @@
             <div class="contact-email">
               <i class="ion-ios-email-outline"></i>
               <h3>Email</h3>
-              <p><a href="mailto:info@example.com">avalenzuela003@gmail.com</a></p>
+              <p><a href="mailto:info@example.com">a3s.eng.mantservices@gmail.com</a></p>
             </div>
           </div>
 
@@ -675,7 +675,7 @@
               Florida, Sanford 32771<br>
               United States <br>
               <strong>Phone:</strong> +1 407 600 1134<br>
-              <strong>Email:</strong> avalenzuela003@gmail.com<br>
+              <strong>Email:</strong> a3s.eng.mantservices@gmail.com<br>
             </p>
 
             <div class="social-links">
